added README message

--- a/README
+++ b/README
@@ -19,3 +19,13 @@ Major features of MACME are:
  * ability to generate maps and other representations
 
  * open API to access MACME functionalities and to build new ones (not yet completed, but we're getting there :) )
+
+
+a tutorial for MACME can be found here:
+
+http://www.slideshare.net/xdxd/reff-04-macmeinstallationtutorial
+
+
+and here is some documentation to the general project, prepared for workshops on MACME which we are conducting in universities all over Europe
+
+http://www.artisopensource.net/2011/02/17/workshops-and-tutorials-slides-informations-and-software-downloads/
